- Log command result into the Log